--- a/Inventory/Components/Products/CreateProductComponent.razor
+++ b/Inventory/Components/Products/CreateProductComponent.razor
@@ -3,17 +3,26 @@
 
 <div>
     <EditForm Model="oProduct">
-        <div class="form-control">
+        <div class="form-group">
             <label>Referencia:</label>
             <InputText @bind-Value="oProduct.ProductId" class="form-control"></InputText>
         </div>
-        <div class="form-control">
+        <div class="form-group">
             <label>Nombre del Producto:</label>
             <InputText @bind-Value="oProduct.ProductName" class="form-control"></InputText>
         </div>
-        <div class="form-control">
+        <div class="form-group">
             <label>Descripción del Producto:</label>
             <InputTextArea @bind-Value="oProduct.ProductDescription" class="form-control"></InputTextArea>
+        </div>
+        <div class="form-group">
+            <label>Categoría:</label>
+            <InputSelect @bind-Value="oProduct.CategoryId" class="form-control">
+                @foreach (var category in categories)
+                    {
+                        <option value="@category.CategoryId">@category.CategoryName</option>
+                    }
+            </InputSelect> 
         </div>
         <input type="button" value="Agregar Producto" @onclick="SaveProduct" />
     </EditForm>
@@ -21,6 +30,12 @@
 
 @code {
     ProductEntity oProduct = new ProductEntity();
+    List<CategoryEntity> categories = new List<CategoryEntity>();
+
+    protected override async Task OnInitializedAsync()
+    {
+        categories = B_Category.CategoryList();
+    }
 
     private void SaveProduct()
     {
