--- a/Inventory/Components/Products/CreateProductComponent.razor
+++ b/Inventory/Components/Products/CreateProductComponent.razor
@@ -16,13 +16,17 @@
             <InputTextArea @bind-Value="oProduct.ProductDescription" class="form-control"></InputTextArea>
         </div>
         <div class="form-group">
+            <label>Cantidad</label>
+            <InputNumber @bind-Value="oProduct.TotalQuantity" class="form-control" />
+        </div>
+        <div class="form-group">
             <label>Categoría:</label>
             <InputSelect @bind-Value="oProduct.CategoryId" class="form-control">
                 @foreach (var category in categories)
-                    {
-                        <option value="@category.CategoryId">@category.CategoryName</option>
-                    }
-            </InputSelect> 
+                {
+                    <option value="@category.CategoryId">@category.CategoryName</option>
+                }
+            </InputSelect>
         </div>
         <input type="button" value="Agregar Producto" @onclick="SaveProduct" />
     </EditForm>
