--- a/Inventory/Components/Products/ListProductsComponent.razor
+++ b/Inventory/Components/Products/ListProductsComponent.razor
@@ -1,6 +1,15 @@
 ﻿@using Entities
 @using Business
 
+<hr />
+<select class="form-control" @onchange="CategoryChanged">
+    <option value="">Seleccione categoria...</option>
+    @foreach(var category in categories)
+            {
+                <option value="@category.CategoryId">@category.CategoryName</option>
+            } 
+</select>
+
 <table class="table table-hover">
     <thead>
         <tr>
@@ -10,7 +19,7 @@
         </tr>
     </thead>
     <tbody>
-        @foreach(var product in products)
+        @foreach(var product in tempProducts)
             {
                 <tr>
                     <th>@product.ProductId</th>
@@ -21,11 +30,25 @@
     </tbody>
 </table>
 
+@message
+
 @code{
     List<ProductEntity> products = new List<ProductEntity>();
+    List<ProductEntity> tempProducts = new List<ProductEntity>();
+    List<CategoryEntity> categories = new List<CategoryEntity>();
+
+    string message;
 
     protected override async Task OnInitializedAsync()
     {
         products = B_Product.ProductList();
+        tempProducts = products;
+        categories = B_Category.CategoryList();
+    }
+
+    private void CategoryChanged(ChangeEventArgs e)
+    {
+        //message = e.Value.ToString();
+        tempProducts = products.Where(x => x.CategoryId == e.Value.ToString()).ToList();
     }
 }
