--- a/Inventory/Components/Products/ListProductsComponent.razor
+++ b/Inventory/Components/Products/ListProductsComponent.razor
@@ -24,7 +24,7 @@
                 <tr>
                     <th>@product.ProductId</th>
                     <th>@product.ProductName</th>
-                    <th>@product</th>
+                    <th>@product.CategoryId</th>
                 </tr>
             }
     </tbody>
