--- a/Inventory/Components/Products/ListProductsComponent.razor
+++ b/Inventory/Components/Products/ListProductsComponent.razor
@@ -16,6 +16,7 @@
             <th>Referencia</th>
             <th>Nombre Producto</th>
             <th>Categoria</th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -25,6 +26,7 @@
                     <th>@product.ProductId</th>
                     <th>@product.ProductName</th>
                     <th>@product.CategoryId</th>
+                    <th><a href="product/update/@product.ProductId">Actualizar Producto</a></th>
                 </tr>
             }
     </tbody>
