--- a/Inventory/Components/Storages/CreateStorageComponet.razor
+++ b/Inventory/Components/Storages/CreateStorageComponet.razor
@@ -25,10 +25,16 @@
     <input type="button" value="Almacenar Producto" @onclick="SaveStorage"/>
 </EditForm>
 
+<div class="text-center h4">
+    @message
+</div>
+
 @code {
     StorageEntity oStorage = new StorageEntity();
     List<WareHouseEntity> warehouses = new List<WareHouseEntity>();
     List<ProductEntity> products = new List<ProductEntity>();
+
+    string message;
 
     protected override async Task OnInitializedAsync()
     {
@@ -38,8 +44,18 @@
 
     private void SaveStorage()
     {
-        oStorage.LastUpdate = DateTime.Now;
-        oStorage.StorageId = Guid.NewGuid().ToString();
-        B_Storage.CreateStorage(oStorage);
+        oStorage.StorageId = $"{oStorage.WareHouseId}-{oStorage.ProductId}";
+
+        if (!B_Storage.IsProductInWarehouse(oStorage.StorageId))
+        {
+            oStorage.LastUpdate = DateTime.Now;
+            B_Storage.CreateStorage(oStorage);
+            message = "Producto Registrado";
+        }
+        else
+        {
+            message = "Producto ya existe en la bodega";
+        }
+
     }
 }
