Cargando productos por bodega para entradas y salidas

--- a/Inventory/Pages/Index.razor
+++ b/Inventory/Pages/Index.razor
@@ -1,4 +1,4 @@
 ﻿@page "/"
 
-<ListProductsComponent></ListProductsComponent>
+<CreateInOutComponent></CreateInOutComponent>
 @*<CreateProductComponent></CreateProductComponent>*@
