--- a/Inventory/_Imports.razor
+++ b/Inventory/_Imports.razor
@@ -11,3 +11,4 @@
 @using Inventory.Components.Ejercicios.Forms
 @using Inventory.Components.Products
 @using Inventory.Components.Storages
+@using Inventory.Components.InOuts
