--- a/Inventory/Components/InOuts/CreateInOutComponent.razor
+++ b/Inventory/Components/InOuts/CreateInOutComponent.razor
@@ -11,10 +11,37 @@
     </select>
 </div>
 
+<hr />
+
+    <EditForm Model="oInOutPut">
+        <div class="form-group">
+            <InputSelect class="form-control" @bind-Value="oInOutPut.StorageId">
+                <option value="">Seleccione una producto</option>
+                @foreach (var storage in storages)
+                {
+                    <option value="@storage.StorageId">@storage.Product.ProductName</option>
+                }
+            </InputSelect>
+        </div>
+        <div class="form-group">
+            <label>Escriba la Cantidad</label>
+            <InputNumber class="form-control" @bind-Value="oInOutPut.Quantity"></InputNumber>
+        </div>
+        <div class="form-group">
+            <label>@question</label>
+            <InputCheckbox class="form-control" @bind-Value="oInOutPut.IsInput"></InputCheckbox>
+        </div>
+        <input class="form-control" type="button" value="@buttonValue" @onclick="SaveInOut"/>
+    </EditForm>
+
+
 @code {
     InputOutputEnitity oInOutPut = new InputOutputEnitity();
     List<WareHouseEntity> warehouses = new List<WareHouseEntity>();
     List<StorageEntity> storages = new List<StorageEntity>();
+
+    string question {get => oInOutPut.IsInput ? "¿Es una Entrada?" : "¿Es una Salida?"; }
+    string buttonValue => oInOutPut.IsInput ? "Registrar Entrada" : "Registrar Salida";
 
     protected override async Task OnInitializedAsync()
     {
@@ -24,5 +51,11 @@
     private void OnChangedWarehouse(ChangeEventArgs e)
     {
         var idWarehouse = e.Value.ToString();
+        storages = B_Storage.StorageProductByWarehouse(idWarehouse);
+    }
+
+    private void SaveInOut()
+    {
+
     }
 }
