Cambios en el Index.razor

--- a/Inventory/Pages/Index.razor
+++ b/Inventory/Pages/Index.razor
@@ -1,4 +1,15 @@
 ﻿@page "/"
 
-<CreateInOutComponent></CreateInOutComponent>
+<h1>Sistema de Inventario</h1>
+
+<div class="container-fluid">
+    <p class="float-right">
+        <span class="oi oi-target" style="font-size:60px"></span>
+    </p>
+    <p class="h4">
+        Bienvenido a tu Sistema de Inventario
+    </p>
+</div>
+
+@*<CreateInOutComponent></CreateInOutComponent>*@
 @*<CreateProductComponent></CreateProductComponent>*@
